[gd_scene load_steps=3 format=3 uid="uid://dy8dbwhl4520x"]

[ext_resource type="Script" path="res://sampled_ap_questions.gd" id="1_4tpyv"]
[ext_resource type="Texture2D" uid="uid://ca31fvmb5vlf" path="res://Stats MCQ Answer Streaks Distribution (1).png" id="3_187dj"]

[node name="sampledAPQuestions" type="CanvasLayer"]
script = ExtResource("1_4tpyv")

[node name="ObservedCounts" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 297.0
offset_top = -286.0
offset_right = 298.0
offset_bottom = -219.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48

[node name="streak1" type="Label" parent="ObservedCounts"]
layout_mode = 0
offset_left = 47.0
offset_top = 87.0
offset_right = 252.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 24
text = "0"

[node name="streak2" type="Label" parent="ObservedCounts"]
layout_mode = 0
offset_left = 47.0
offset_top = 117.0
offset_right = 253.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 24
text = "0"

[node name="streak3" type="Label" parent="ObservedCounts"]
layout_mode = 0
offset_left = 47.0
offset_top = 148.0
offset_right = 253.0
offset_bottom = 193.0
theme_override_font_sizes/font_size = 24
text = "0"

[node name="streak4_" type="Label" parent="ObservedCounts"]
layout_mode = 0
offset_left = 47.0
offset_top = 179.0
offset_right = 253.0
offset_bottom = 224.0
theme_override_font_sizes/font_size = 24
text = "0"

[node name="CenteringTableImage" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="StatsMcqAnswerStreaksDistribution" type="Sprite2D" parent="CenteringTableImage"]
position = Vector2(364, -97)
scale = Vector2(0.541667, 0.541667)
texture = ExtResource("3_187dj")
